force-app/main/default/objects/B2B_Account_Setup__mdt/B2B_Account_Setup__mdt.object-meta.xml
<CustomObject>
    <label>B2B Account Setup</label>
    <pluralLabel>B2B_Account_Setups</pluralLabel>
</CustomObject>