force-app/main/default/objects/B2B_Account_Setup__mdt/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <description>Community name used to retrieve community/network related data</description>
    <inlineHelpText>Community name used to retrieve community/network related data</inlineHelpText>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>