force-app/main/default/objects/B2B_Account_Setup__mdt/fields/Record_Type_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Names__c</fullName>
    <description>Record types for Account trigger to pickup for B2B Accounts</description>
    <inlineHelpText>Comma separated values for Relevant B2B account record types</inlineHelpText>
    <label>Record Type Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>