force-app/main/default/objects/B2B_Account_Setup__mdt/fields/Standard_Buyer_Groups__c.field-meta.xml
<CustomField>
    <fullName>Standard_Buyer_Groups__c</fullName>
    <description>Standard Buyer Group Names</description>
    <inlineHelpText>Enter each Buyer Group name followed by a comma</inlineHelpText>
    <label>Standard Buyer Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>