force-app/main/default/objects/B2B_Account_Setup__mdt/fields/Web_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Store_Name__c</fullName>
    <label>Web Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>